fix: Top nav blurring not working in iOS Safari

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -143,6 +143,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
 
